exports[`prefer-url-can-parse > invalid(1): function isValidUrl() { try { new URL(value); return true; } catch { return false; } } 1`] = `

  1 | function isValidUrl() { try { new URL(value); return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(1): function isValidUrl() { try { new URL(value); return true; } catch { return false; } } 2`] = `

Message:
> 1 | function isValidUrl() { try { new URL(value); return true; } catch { return false; } }
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | function isValidUrl() { return URL.canParse(value); }

`;

exports[`prefer-url-can-parse > invalid(10): let valid; try { new URL(value); valid = false; } catch { valid = true; } 1`] = `

  1 | let valid; try { new URL(value); valid = false; } catch { valid = true; }

`;

exports[`prefer-url-can-parse > invalid(10): let valid; try { new URL(value); valid = false; } catch { valid = true; } 2`] = `

Message:
> 1 | let valid; try { new URL(value); valid = false; } catch { valid = true; }
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | let valid; valid = !URL.canParse(value);

`;

exports[`prefer-url-can-parse > invalid(11): let valid; /* comment */ try { new URL(value); valid = true; } catch { valid = false; } 1`] = `

  1 | let valid; /* comment */ try { new URL(value); valid = true; } catch { valid = false; }

`;

exports[`prefer-url-can-parse > invalid(11): let valid; /* comment */ try { new URL(value); valid = true; } catch { valid = false; } 2`] = `

Message:
> 1 | let valid; /* comment */ try { new URL(value); valid = true; } catch { valid = false; }
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | let valid; /* comment */ valid = URL.canParse(value);

`;

exports[`prefer-url-can-parse > invalid(12): let valid; try { new URL(valid); valid = true; } catch { valid = false; } 1`] = `

  1 | let valid; try { new URL(valid); valid = true; } catch { valid = false; }

`;

exports[`prefer-url-can-parse > invalid(12): let valid; try { new URL(valid); valid = true; } catch { valid = false; } 2`] = `

Message:
> 1 | let valid; try { new URL(valid); valid = true; } catch { valid = false; }
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | let valid; valid = URL.canParse(valid);

`;

exports[`prefer-url-can-parse > invalid(13): let valid; try { new URL(value); valid = true; } catch { valid = false; } valid = maybe; 1`] = `

  1 | let valid; try { new URL(value); valid = true; } catch { valid = false; } valid = maybe;

`;

exports[`prefer-url-can-parse > invalid(13): let valid; try { new URL(value); valid = true; } catch { valid = false; } valid = maybe; 2`] = `

Message:
> 1 | let valid; try { new URL(value); valid = true; } catch { valid = false; } valid = maybe;
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | let valid; valid = URL.canParse(value); valid = maybe;

`;

exports[`prefer-url-can-parse > invalid(14): const value = {toString() { return valid; }}; let valid; try { new URL(value); valid = true; } catch { valid = false; } 1`] = `

  1 | const value = {toString() { return valid; }}; let valid; try { new URL(value); valid = true; } catch { valid = false; }

`;

exports[`prefer-url-can-parse > invalid(14): const value = {toString() { return valid; }}; let valid; try { new URL(value); valid = true; } catch { valid = false; } 2`] = `

Message:
> 1 | const value = {toString() { return valid; }}; let valid; try { new URL(value); valid = true; } catch { valid = false; }
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | const value = {toString() { return valid; }}; let valid; valid = URL.canParse(value);

`;

exports[`prefer-url-can-parse > invalid(15): try { new URL(value); valid = true; } catch (error) { valid = false; } 1`] = `

  1 | try { new URL(value); valid = true; } catch (error) { valid = false; }

`;

exports[`prefer-url-can-parse > invalid(15): try { new URL(value); valid = true; } catch (error) { valid = false; } 2`] = `

Message:
> 1 | try { new URL(value); valid = true; } catch (error) { valid = false; }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | valid = URL.canParse(value);

`;

exports[`prefer-url-can-parse > invalid(16): import {URL} from 'node:url'; function isValidUrl() { try { new URL(value); return true; } catch { return false; } } 1`] = `

  1 | import {URL} from 'node:url'; function isValidUrl() { try { new URL(value); return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(16): import {URL} from 'node:url'; function isValidUrl() { try { new URL(value); return true; } catch { return false; } } 2`] = `

Message:
> 1 | import {URL} from 'node:url'; function isValidUrl() { try { new URL(value); return true; } catch { return false; } }
    |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | import {URL} from 'node:url'; function isValidUrl() { return URL.canParse(value); }

`;

exports[`prefer-url-can-parse > invalid(17): import {URL as NodeURL} from 'url'; function isValidUrl() { try { new NodeURL(value); return true; } catch { return false; } } 1`] = `

  1 | import {URL as NodeURL} from 'url'; function isValidUrl() { try { new NodeURL(value); return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(17): import {URL as NodeURL} from 'url'; function isValidUrl() { try { new NodeURL(value); return true; } catch { return false; } } 2`] = `

Message:
> 1 | import {URL as NodeURL} from 'url'; function isValidUrl() { try { new NodeURL(value); return true; } catch { return false; } }
    |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | import {URL as NodeURL} from 'url'; function isValidUrl() { return NodeURL.canParse(value); }

`;

exports[`prefer-url-can-parse > invalid(18): import {URL as NodeURL} from 'url'; function isValidUrl() { try { new NodeURL(value, base); return true; } catch { return false; } } 1`] = `

  1 | import {URL as NodeURL} from 'url'; function isValidUrl() { try { new NodeURL(value, base); return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(18): import {URL as NodeURL} from 'url'; function isValidUrl() { try { new NodeURL(value, base); return true; } catch { return false; } } 2`] = `

Message:
> 1 | import {URL as NodeURL} from 'url'; function isValidUrl() { try { new NodeURL(value, base); return true; } catch { return false; } }
    |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | import {URL as NodeURL} from 'url'; function isValidUrl() { return NodeURL.canParse(value, base); }

`;

exports[`prefer-url-can-parse > invalid(19): import type {URL} from \"node:url\"; function isValidUrl() { try { new URL(value); return true; } catch { return false; } } 1`] = `

  1 | import type {URL} from "node:url"; function isValidUrl() { try { new URL(value); return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(19): import type {URL} from \"node:url\"; function isValidUrl() { try { new URL(value); return true; } catch { return false; } } 2`] = `

Message:
> 1 | import type {URL} from "node:url"; function isValidUrl() { try { new URL(value); return true; } catch { return false; } }
    |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | import type {URL} from "node:url"; function isValidUrl() { return URL.canParse(value); }

`;

exports[`prefer-url-can-parse > invalid(2): function isValidUrl() {\n\ttry {\n\t\tnew URL(value, base);\n\t\treturn true;\n\t} catch {\n\t\treturn false;\n\t}\n} 1`] = `

  1 | function isValidUrl() {
  2 | 	try {
  3 | 		new URL(value, base);
  4 | 		return true;
  5 | 	} catch {
  6 | 		return false;
  7 | 	}
  8 | }

`;

exports[`prefer-url-can-parse > invalid(2): function isValidUrl() {\n\ttry {\n\t\tnew URL(value, base);\n\t\treturn true;\n\t} catch {\n\t\treturn false;\n\t}\n} 2`] = `

Message:
  1 | function isValidUrl() {
> 2 | 	try {
    | 	^^^^^
> 3 | 		new URL(value, base);
    | ^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		return true;
    | ^^^^^^^^^^^^^^
> 5 | 	} catch {
    | ^^^^^^^^^^
> 6 | 		return false;
    | ^^^^^^^^^^^^^^^
> 7 | 	}
    | ^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.
  8 | }

Output:
  1 | function isValidUrl() {
  2 | 	return URL.canParse(value, base);
  3 | }

`;

exports[`prefer-url-can-parse > invalid(20): declare const URL: URLConstructor; function isValidUrl() { try { new URL(value); return true; } catch { return false; } } 1`] = `

  1 | declare const URL: URLConstructor; function isValidUrl() { try { new URL(value); return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(20): declare const URL: URLConstructor; function isValidUrl() { try { new URL(value); return true; } catch { return false; } } 2`] = `

Message:
> 1 | declare const URL: URLConstructor; function isValidUrl() { try { new URL(value); return true; } catch { return false; } }
    |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | declare const URL: URLConstructor; function isValidUrl() { return URL.canParse(value); }

`;

exports[`prefer-url-can-parse > invalid(21): function isValidUrl() { try { new URL(value); return true; } catch (error) { return false; } } 1`] = `

  1 | function isValidUrl() { try { new URL(value); return true; } catch (error) { return false; } }

`;

exports[`prefer-url-can-parse > invalid(21): function isValidUrl() { try { new URL(value); return true; } catch (error) { return false; } } 2`] = `

Message:
> 1 | function isValidUrl() { try { new URL(value); return true; } catch (error) { return false; } }
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | function isValidUrl() { return URL.canParse(value); }

`;

exports[`prefer-url-can-parse > invalid(22): function isValidUrl() { const foo = 1\ntry { new URL(value); return true; } catch { return false; } } 1`] = `

  1 | function isValidUrl() { const foo = 1
  2 | try { new URL(value); return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(22): function isValidUrl() { const foo = 1\ntry { new URL(value); return true; } catch { return false; } } 2`] = `

Message:
  1 | function isValidUrl() { const foo = 1
> 2 | try { new URL(value); return true; } catch { return false; } }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | function isValidUrl() { const foo = 1
  2 | return URL.canParse(value); }

`;

exports[`prefer-url-can-parse > invalid(23): function isValidUrl() { try { new URL(value as string); return true; } catch { return false; } } 1`] = `

  1 | function isValidUrl() { try { new URL(value as string); return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(23): function isValidUrl() { try { new URL(value as string); return true; } catch { return false; } } 2`] = `

Message:
> 1 | function isValidUrl() { try { new URL(value as string); return true; } catch { return false; } }
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | function isValidUrl() { return URL.canParse(value as string); }

`;

exports[`prefer-url-can-parse > invalid(24): let valid: boolean; try { new URL(value); valid = true; } catch { valid = false; } 1`] = `

  1 | let valid: boolean; try { new URL(value); valid = true; } catch { valid = false; }

`;

exports[`prefer-url-can-parse > invalid(24): let valid: boolean; try { new URL(value); valid = true; } catch { valid = false; } 2`] = `

Message:
> 1 | let valid: boolean; try { new URL(value); valid = true; } catch { valid = false; }
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | let valid: boolean; valid = URL.canParse(value);

`;

exports[`prefer-url-can-parse > invalid(25): function isValidUrl() { try { /* comment */ new URL(value); return true; } catch { return false; } } 1`] = `

  1 | function isValidUrl() { try { /* comment */ new URL(value); return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(25): function isValidUrl() { try { /* comment */ new URL(value); return true; } catch { return false; } } 2`] = `

Message:
> 1 | function isValidUrl() { try { /* comment */ new URL(value); return true; } catch { return false; } }
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

`;

exports[`prefer-url-can-parse > invalid(26): function isValidUrl() { try { new URL(value); /* comment */ return true; } catch { return false; } } 1`] = `

  1 | function isValidUrl() { try { new URL(value); /* comment */ return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(26): function isValidUrl() { try { new URL(value); /* comment */ return true; } catch { return false; } } 2`] = `

Message:
> 1 | function isValidUrl() { try { new URL(value); /* comment */ return true; } catch { return false; } }
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

`;

exports[`prefer-url-can-parse > invalid(27): function isValidUrl() { try { new URL(value); return true; } catch { /* comment */ return false; } } 1`] = `

  1 | function isValidUrl() { try { new URL(value); return true; } catch { /* comment */ return false; } }

`;

exports[`prefer-url-can-parse > invalid(27): function isValidUrl() { try { new URL(value); return true; } catch { /* comment */ return false; } } 2`] = `

Message:
> 1 | function isValidUrl() { try { new URL(value); return true; } catch { /* comment */ return false; } }
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

`;

exports[`prefer-url-can-parse > invalid(28): try { new URL(value); /* comment */ valid = true; } catch { valid = false; } 1`] = `

  1 | try { new URL(value); /* comment */ valid = true; } catch { valid = false; }

`;

exports[`prefer-url-can-parse > invalid(28): try { new URL(value); /* comment */ valid = true; } catch { valid = false; } 2`] = `

Message:
> 1 | try { new URL(value); /* comment */ valid = true; } catch { valid = false; }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

`;

exports[`prefer-url-can-parse > invalid(29): try { new URL(value); valid = true; } catch { /* comment */ valid = false; } 1`] = `

  1 | try { new URL(value); valid = true; } catch { /* comment */ valid = false; }

`;

exports[`prefer-url-can-parse > invalid(29): try { new URL(value); valid = true; } catch { /* comment */ valid = false; } 2`] = `

Message:
> 1 | try { new URL(value); valid = true; } catch { /* comment */ valid = false; }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

`;

exports[`prefer-url-can-parse > invalid(3): function isValidUrl() { try { new URL(value); return false; } catch { return true; } } 1`] = `

  1 | function isValidUrl() { try { new URL(value); return false; } catch { return true; } }

`;

exports[`prefer-url-can-parse > invalid(3): function isValidUrl() { try { new URL(value); return false; } catch { return true; } } 2`] = `

Message:
> 1 | function isValidUrl() { try { new URL(value); return false; } catch { return true; } }
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | function isValidUrl() { return !URL.canParse(value); }

`;

exports[`prefer-url-can-parse > invalid(4): function isValidUrl() { try { new URL(value, base); return true; } catch { return false; } } 1`] = `

  1 | function isValidUrl() { try { new URL(value, base); return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(4): function isValidUrl() { try { new URL(value, base); return true; } catch { return false; } } 2`] = `

Message:
> 1 | function isValidUrl() { try { new URL(value, base); return true; } catch { return false; } }
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | function isValidUrl() { return URL.canParse(value, base); }

`;

exports[`prefer-url-can-parse > invalid(5): function isValidUrl() { try { new URL((value)); return true; } catch { return false; } } 1`] = `

  1 | function isValidUrl() { try { new URL((value)); return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(5): function isValidUrl() { try { new URL((value)); return true; } catch { return false; } } 2`] = `

Message:
> 1 | function isValidUrl() { try { new URL((value)); return true; } catch { return false; } }
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | function isValidUrl() { return URL.canParse(value); }

`;

exports[`prefer-url-can-parse > invalid(6): function isValidUrl() { const Symbol = {iterator: value}; try { new URL(Symbol.iterator); return true; } catch { return false; } } 1`] = `

  1 | function isValidUrl() { const Symbol = {iterator: value}; try { new URL(Symbol.iterator); return true; } catch { return false; } }

`;

exports[`prefer-url-can-parse > invalid(6): function isValidUrl() { const Symbol = {iterator: value}; try { new URL(Symbol.iterator); return true; } catch { return false; } } 2`] = `

Message:
> 1 | function isValidUrl() { const Symbol = {iterator: value}; try { new URL(Symbol.iterator); return true; } catch { return false; } }
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | function isValidUrl() { const Symbol = {iterator: value}; return URL.canParse(Symbol.iterator); }

`;

exports[`prefer-url-can-parse > invalid(7): try { new URL(value); valid = true; } catch { valid = false; } 1`] = `

  1 | try { new URL(value); valid = true; } catch { valid = false; }

`;

exports[`prefer-url-can-parse > invalid(7): try { new URL(value); valid = true; } catch { valid = false; } 2`] = `

Message:
> 1 | try { new URL(value); valid = true; } catch { valid = false; }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | valid = URL.canParse(value);

`;

exports[`prefer-url-can-parse > invalid(8): try { new URL(value); valid = false; } catch { valid = true; } 1`] = `

  1 | try { new URL(value); valid = false; } catch { valid = true; }

`;

exports[`prefer-url-can-parse > invalid(8): try { new URL(value); valid = false; } catch { valid = true; } 2`] = `

Message:
> 1 | try { new URL(value); valid = false; } catch { valid = true; }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | valid = !URL.canParse(value);

`;

exports[`prefer-url-can-parse > invalid(9): let valid; try { new URL(value); valid = true; } catch { valid = false; } 1`] = `

  1 | let valid; try { new URL(value); valid = true; } catch { valid = false; }

`;

exports[`prefer-url-can-parse > invalid(9): let valid; try { new URL(value); valid = true; } catch { valid = false; } 2`] = `

Message:
> 1 | let valid; try { new URL(value); valid = true; } catch { valid = false; }
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`URL.canParse()\` over constructing a \`URL\` in a try/catch for validation.

Output:
  1 | let valid; valid = URL.canParse(value);

`;
